// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Folder Tree should build path tree node when root exist 1`] = `
{
  "fileList1": Set {
    {
      "path": "/test/Goodbye/asas/test.jpg",
      "thumbnail": "/test/Goodbye/asas/.picasaoriginals/test.jpg",
    },
    {
      "path": "/test/go/sdks/test2.jpg",
      "thumbnail": "/test/go/sdks/.picasaoriginals/test2.jpg",
    },
  },
  "fileList2": Set {
    {
      "path": "/test/Goodbye/asas/test.jpg",
      "thumbnail": "/test/Goodbye/asas/.picasaoriginals/test.jpg",
    },
  },
  "fileList3": Set {},
  "roots": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "key": "/test/Goodbye/asas",
              "title": "asas",
            },
          ],
          "key": "/test/Goodbye",
          "title": "Goodbye",
        },
        {
          "children": [
            {
              "children": [],
              "key": "/test/go/sdks",
              "title": "sdks",
            },
          ],
          "key": "/test/go",
          "title": "go",
        },
      ],
      "key": "/test/",
      "title": "test",
    },
  ],
}
`;

exports[`Folder Tree should build path tree node with multiple 1`] = `
{
  "fileList1": Set {
    {
      "path": "/test/Goodbye/test.jpg",
      "thumbnail": "/test/Goodbye/.picasaoriginals/test.jpg",
    },
    {
      "path": "/test/go/test2.jpg",
      "thumbnail": "/test/go/.picasaoriginals/test2.jpg",
    },
  },
  "fileList2": Set {
    {
      "path": "/test/go/test2.jpg",
      "thumbnail": "/test/go/.picasaoriginals/test2.jpg",
    },
  },
  "fileList3": Set {
    {
      "path": "/test/Goodbye/test.jpg",
      "thumbnail": "/test/Goodbye/.picasaoriginals/test.jpg",
    },
  },
  "roots": [
    {
      "children": [
        {
          "children": [],
          "key": "/test/Goodbye",
          "title": "Goodbye",
        },
        {
          "children": [],
          "key": "/test/go",
          "title": "go",
        },
      ],
      "key": "/test/",
      "title": "test",
    },
  ],
}
`;

exports[`Folder Tree should build path tree node with one path 1`] = `
{
  "fileList1": Set {
    {
      "path": "/test/Goodbye/test.jpg",
      "thumbnail": "/test/Goodbye/.picasaoriginals/test.jpg",
    },
    {
      "path": "/test/Goodbye/test2.jpg",
      "thumbnail": "/test/Goodbye/.picasaoriginals/test2.jpg",
    },
  },
  "fileList2": Set {
    {
      "path": "/test/Goodbye/test.jpg",
      "thumbnail": "/test/Goodbye/.picasaoriginals/test.jpg",
    },
    {
      "path": "/test/Goodbye/test2.jpg",
      "thumbnail": "/test/Goodbye/.picasaoriginals/test2.jpg",
    },
  },
  "roots": [
    {
      "children": [
        {
          "children": [],
          "key": "/test/Goodbye",
          "title": "Goodbye",
        },
      ],
      "key": "/test/",
      "title": "test",
    },
  ],
}
`;

exports[`Folder Tree should build path tree node without duplication 1`] = `
{
  "fileList1": Set {
    {
      "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image0-15.jpg",
      "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image0-15.jpg",
    },
    {
      "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-1.jpg",
      "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-1.jpg",
    },
    {
      "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-1.jpg",
      "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-1.jpg",
    },
    {
      "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-2.jpg",
      "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-2.jpg",
    },
  },
  "fileList2": Set {
    {
      "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image0-15.jpg",
      "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image0-15.jpg",
    },
    {
      "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-1.jpg",
      "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-1.jpg",
    },
    {
      "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-1.jpg",
      "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-1.jpg",
    },
    {
      "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-2.jpg",
      "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-2.jpg",
    },
  },
  "roots": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "key": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装",
              "title": "19610000_天津_老爸戎装",
            },
          ],
          "key": "/Users/albert.li/Desktop/196X",
          "title": "196X",
        },
      ],
      "key": "/Users/albert.li/Desktop/",
      "title": "/Uses/albert.li/Desktop",
    },
  ],
}
`;

exports[`Folder Tree should create path file list 1`] = `
Set {
  {
    "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image0-15.jpg",
    "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image0-15.jpg",
  },
  {
    "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-1.jpg",
    "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-1.jpg",
  },
  {
    "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-1.jpg",
    "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-1.jpg",
  },
  {
    "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-2.jpg",
    "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-2.jpg",
  },
  {
    "path": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-3.jpg",
    "thumbnail": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/.picasaoriginals/image1-3.jpg",
  },
}
`;

exports[`Folder Tree should return a DataNode 1`] = `
{
  "fileList1": Set {
    {
      "path": "/test/google.com/test.jpg",
      "thumbnail": "/test/google.com/.picasaoriginals/test.jpg",
    },
  },
  "fileList2": Set {
    {
      "path": "/test/google.com/test.jpg",
      "thumbnail": "/test/google.com/.picasaoriginals/test.jpg",
    },
  },
  "roots": [
    {
      "children": [
        {
          "children": [],
          "key": "/test/google.com",
          "title": "google.com",
        },
      ],
      "key": "/test/",
      "title": "test",
    },
  ],
}
`;
